代辦事項完成

--- a/GuessGame/style.css
+++ b/GuessGame/style.css
@@ -9,9 +9,9 @@
        margin-top: 10px;
        text-align: center;
        width: 350px;
-       background-color: #87cefa;
+       background-color: #858f94;
        border: 1px solid #ffffff;
-       box-shadow: 0px 2px 20px #028094;
+       box-shadow: 0px 2px 20px #527479;
        border-radius: 10px;
        padding-bottom: 15px;
    }
